--- a/LDJam45/Packages/manifest.json
+++ b/LDJam45/Packages/manifest.json
@@ -38,5 +38,6 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
+    "com.unity.probuilder": "4.0.3"
   }
 }
